apps/services/jenkins/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    cert-manager.io/cluster-issuer: homelab-issuer
    gethomepage.dev/description: Continuous Integration pipelines
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: jenkins.png
    gethomepage.dev/name: Jenkins
spec:
  rules:
    - host: jenkins.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 80
  tls:
    - hosts:
        - jenkins.internal
      secretName: homelab-tls
